.provarCaches/00D5f000005vwGkEAI/objects/rstk__PrintTemplateMapping__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_printtemplatemapping</customHelpPage>
    <description>PrintTemplateMapping__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(rstk__template_type__c) &amp; &apos;_&apos; &amp; rstk__source_field__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__is_extraline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Extra Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates this is for a line</inlineHelpText>
        <label>Is Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__issubject__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates this is for a subject.</inlineHelpText>
        <label>Is Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__source_field__c</fullName>
        <inlineHelpText>Enter the applicable source field</inlineHelpText>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__template_type__c</fullName>
        <inlineHelpText>Set to the appropriate template type.  Options are

PO Print
SO Acknowledgement
SO Invoice
Packing Slip
Bill of Lading</inlineHelpText>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PO Print</fullName>
                </value>
                <value>
                    <fullName>SO Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>SO Invoice</fullName>
                </value>
                <value>
                    <fullName>Packing Slip</fullName>
                </value>
                <value>
                    <fullName>Bill of Lading</fullName>
                </value>
                <value>
                    <fullName>RMA Print</fullName>
                </value>
                <value>
                    <fullName>SO Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Print Template Mapping</label>
    <listViews>
        <fullName>rstk__Print_Mapping</fullName>
        <columns>rstk__template_type__c</columns>
        <columns>NAME</columns>
        <columns>rstk__source_field__c</columns>
        <columns>rstk__isline__c</columns>
        <columns>rstk__issubject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Print Mapping</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Print Template Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>